# avans-swa

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindSDL2_mixer.cmake
config/: config.ini
data/: Level2.json  buildings.json  config.json  level1.json  level2.json  level3.json  level4.json  nations.json  scenarios.json
data/images/: foo.json  mayor_bart.pdn
data/levels/: level-001.json  level-002.json  level-003.json
docs/: README.md  Windows.md  api-config.md  api-engine.md  api-eventbus.md  api-math.md  api-music_manager.md  api-sound_manager.md  api.md  building.md  spec.md
src/: game.cpp  game.h  main.cpp  router.cpp  router.h
src/config/: config.cpp  config.h  ini_config.cpp  ini_config.h  json_config.cpp  json_config.h
src/data/: repository.h
src/data/json/: highscore_json_repository.cpp  highscore_json_repository.h  json_repository.h  save_games_json_repository.cpp  save_games_json_repository.h
src/domain/: base_field.cpp  base_field.h  base_map.cpp  base_map.h  base_placable_object.cpp  base_placable_object.h  base_placeable_object.cpp  base_placeable_object.h  building.cpp  building.h  drawable_game_object.cpp  drawable_game_object.h  game_world.cpp  game_world.h  map.cpp  map.h  passable_field.cpp  passable_field.h  resource.cpp  resource.h
src/domain/buildings/: base_placeable_object.cpp  base_placeable_object.h  building.cpp  building.h  road.cpp  road.h
src/domain/combat/: ai_controlled.cpp  ai_controlled.h  attacker.cpp  attacker.h  defender.cpp  defender.h
src/domain/drawable/: abstract_drawable_game_object.h  draw_managers_wrapper.h  drawable_game_object.cpp  drawable_game_object.h
src/domain/game_level/: game_level.cpp  game_level.h  game_stats.cpp  game_stats.h  game_stats_modifier.h
src/domain/gameworld/: game_world.cpp  game_world.h  highscore.cpp  highscore.h
src/domain/map/: ai.cpp  ai.h  base_field.cpp  base_field.h  base_map.cpp  base_map.h  field.cpp  field.h  map.cpp  map.h  passable_field.cpp  passable_field.h
src/domain/mayor/: mayor.cpp  mayor.h
src/domain/nations/: enemy.cpp  enemy.h  nation.cpp  nation.h
src/domain/resources/: resource.cpp  resource.h
src/engine/: engine.cpp  engine.h  engine_config.h  settings.cpp  settings.h  window.cpp  window.h  window_config.h
src/engine/audio/: music_manager.cpp  music_manager.h  sound_callback_wrapper.cpp  sound_callback_wrapper.h  sound_manager.cpp  sound_manager.h  state.h
src/engine/draganddrop/: drag_and_drop.cpp  drag_and_drop.h  dragable.cpp  dragable.h  dropable.cpp  dropable.h
src/engine/eventbus/: eventbus.h  subscriber.h
src/engine/events/: display_changed.cpp  display_changed.h  engine_state_changed.cpp  engine_state_changed.h  game_tick.cpp  game_tick.h  key_down.cpp  key_down.h  mouse_button_down.h  mouse_button_up.h  mouse_motion.cpp  mouse_motion.h  window_cleared.cpp  window_cleared.h
src/engine/graphics/: box_builder.cpp  box_builder.h  color4.hpp  color_manager.cpp  color_manager.h  font_manager.cpp  font_manager.h  moveable_box.cpp  moveable_box.h  texture_manager.cpp  texture_manager.h
src/engine/input/: input_handler.cpp  input_handler.h  keycodes.h  mouse_buttons.h
src/engine/math/: box2.hpp  vec2.hpp
src/engine/observer/: observee.h  observer.h
src/engine/texture/: texture_manager.cpp  texture_manager.h
src/events/: goal_reached.cpp  goal_reached.h  object_cannot_be_placed_on_field.cpp  object_cannot_be_placed_on_field.h  object_dropped_on_field.cpp  object_dropped_on_field.h  object_not_dropped_on_field.cpp  object_not_dropped_on_field.h  object_placed_on_field.cpp  object_placed_on_field.h
src/game/: engine.cpp  engine.h  settings.cpp  settings.h  tile.cpp  tile.h  window.cpp  window.h  window_config.h  world.cpp  world.h
src/game/graphics/: display.cpp  display.h  sprite.cpp  sprite.h  texture.cpp  texture.h
src/game/input/: input_handler.cpp  input_handler.h
src/game/texture/: texture_manager.cpp  texture_manager.h
src/graphics/: color4.hpp
src/gui/: base_gui.cpp  base_gui.h  menu_gui.cpp  menu_gui.h  router.cpp  router.h
src/gui/controllers/: base_controller.cpp  base_controller.h  credits_controller.cpp  credits_controller.h  load_controller.cpp  load_controller.h  main_map_controller.cpp  main_map_controller.h  menu_controller.cpp  menu_controller.h
src/gui/models/: level_goals_model.h  load_model.h  main_map_model.h  transition_level_model.h
src/gui/views/: base_view.h  cli.cpp  cli.h  credits.cpp  credits.h  help.cpp  help.h  in_game_menu.cpp  in_game_menu.h  level.cpp  level.h  level_goals.cpp  level_goals.h  load.cpp  load.h  main_map.cpp  main_map.h  main_menu.cpp  main_menu.h  mayor.cpp  mayor.h  mayor_view.cpp  mayor_view.h  reclame.cpp  reclame.h  top_bar.cpp  top_bar.h  win_game_over.cpp  win_game_over.h
src/listeners/: play_sound_when_object_cannot_be_placed_on_field.cpp  play_sound_when_object_cannot_be_placed_on_field.h  play_sound_when_object_is_placed_on_field.cpp  play_sound_when_object_is_placed_on_field.h
src/math/: box2.hpp  vec2.hpp
src/observer/: observee.h  observer.h
src/services/: wavegenerator.cpp  wavegenerator.h
src/services/level_loader/: base_level_loader.h  building_deserializer.cpp  building_deserializer.h  buildings_deserializer.cpp  buildings_deserializer.h  enemies_deserializer.cpp  enemies_deserializer.h  enemy_deserializer.cpp  enemy_deserializer.h  field_deserializer.cpp  field_deserializer.h  fields_deserializer.cpp  fields_deserializer.h  json_level_loader.cpp  (+14 more)
src/utils/: command_manager.cpp  command_manager.h  json_utils.hpp  string_utils.h
tests/: CMakeLists.txt
tests/data/: person.cpp  person.h
tests/data/json/: json_repository_tests.cpp  person_json_repository.cpp  person_json_repository.h
tests/engine/: engine_tests.cpp
tests/engine/audio/: music_manager_tests.cpp  sound_manager_tests.cpp
tests/engine/eventbus/: eventbus_tests.cpp
tests/engine/eventbus/test_classes/: TestEvent.cpp  TestEvent.h  TestSubscriber.cpp  TestSubscriber.h
tests/engine/math/: vec2_tests.cpp
tests/math/: vec2_tests.cpp
(+42 files in other folders)
